--- a/tracker.web/Views/Home/Create.cshtml
+++ b/tracker.web/Views/Home/Create.cshtml
@@ -19,7 +19,17 @@
             @Html.TextBoxFor(m => m.LastName, new { placeholder = "Last Name", @class = "form-control" })
         </div>
         <div class="col-md-6">
+            @Html.TextBoxFor(m => m.Location, new { placeholder = "Location", @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="row margin-top">
+        <div class="col-md-3">
             @Html.TextBoxFor(m => m.Status, new { placeholder = "Status", @class = "form-control" })
+        </div>
+        <div class="col-md-3">
+            @Html.LabelFor(m => m.IsBench)
+            @Html.CheckBoxFor(m => m.IsBench)
         </div>
     </div>
     
