--- a/tracker.web/Views/Home/Index.cshtml
+++ b/tracker.web/Views/Home/Index.cshtml
@@ -25,8 +25,17 @@
             <div class="col-md-2">
                 @Html.DisplayFor(m => m[i].Name)
             </div>
-            <div class="col-md-9">
+            <div class="col-md-1">
+                @Html.DisplayFor(m => m[i].Location)
+            </div>
+            <div class="col-md-5">
                 @Html.TextBoxFor(m => m[i].Status, new { placeholder = "Status", @class = "form-control" })
+            </div>
+            <div class="col-md-2">
+                @Model[i].LastUpdatedUtc.ToLocalTime().ToLongDateString()
+            </div>
+            <div class="col-md-1">
+                @DateTime.UtcNow.Date.Subtract(Model[i].LastUpdatedUtc).Days Days Old
             </div>
             <div class="col-md-1">
                 @Html.ActionLink("Delete", "Delete", new { id = Model[i].Id })
