Updated UI to edit bench.

--- a/tracker.web/Views/Home/Create.cshtml
+++ b/tracker.web/Views/Home/Create.cshtml
@@ -28,7 +28,7 @@
             @Html.TextBoxFor(m => m.Status, new { placeholder = "Status", @class = "form-control" })
         </div>
         <div class="col-md-3">
-            @Html.LabelFor(m => m.IsBench)
+            <label>Is Bench</label>
             @Html.CheckBoxFor(m => m.IsBench)
         </div>
     </div>
